--- a/scss/home.scss
+++ b/scss/home.scss
@@ -177,6 +177,9 @@
 }
 
 @media($sm-479){
+    .card-sec .h-card-block .join-btn{
+        padding: 15px;
+    }
     .welcome-cover .content-block{
         flex-wrap: wrap;
         flex-direction: column;
