--- a/css/common.css
+++ b/css/common.css
@@ -58,6 +58,10 @@ ul, ol {
   font-weight: 500;
   padding: 10px 15px;
   transition: .3s; }
+  @media (max-width: 479px) {
+    .primary-btn {
+      padding: 16px 15px;
+      border-radius: 8px; } }
   .primary-btn:hover {
     color: #fff;
     opacity: .8; }
@@ -82,6 +86,10 @@ ul, ol {
   padding: 10px 15px;
   transition: .3s ease-in-out;
   text-align: center; }
+  @media (max-width: 479px) {
+    .btn-def {
+      padding: 12px 15px;
+      border-radius: 8px; } }
 
 .custom-scroll::-webkit-scrollbar {
   width: 5px;
