--- a/scss/common.scss
+++ b/scss/common.scss
@@ -59,6 +59,10 @@ ul,ol{
     font-weight: 500;
     padding: 10px 15px;
     transition: .3s;
+    @media ($sm-479) {
+        padding: 16px 15px;
+        border-radius: 8px;
+    }
     &:hover{
         color: $primary-light;
         opacity: .8;
@@ -85,6 +89,10 @@ ul,ol{
     padding: 10px 15px;
     transition: .3s ease-in-out;
     text-align: center;
+    @media ($sm-479) {
+        padding: 12px 15px;
+        border-radius: 8px;
+    }
 }
 // custom scroll
 .custom-scroll {
