--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -3368,7 +3368,8 @@ section.utility-section
             button.btn.btn-learn
             {
                 color: #fff;
-                border-radius: 28px;
+                // border-radius: 28px;
+                border-radius: 8px;
                 background: #2966FF;
                 min-width: 300px;
                 height: 48px;
