--- a/scss/bridge.scss
+++ b/scss/bridge.scss
@@ -573,6 +573,64 @@
         }
     }
     .my-transaction-cover{
+        .transaction-id-mob-wrapper{
+            display: flex;
+            margin-bottom: 20px;
+            gap: 10px;
+            @media (max-width: 370px) {
+                flex-direction: column;
+                margin-bottom: 10px;
+            }
+            .id-block-sm{
+                display: flex;
+                align-items: center;
+                border-radius: 8px;
+                border: 1px solid #E3E4F3;
+                height: 42px;
+                padding: 5px;
+                width: 50%;
+                @media (max-width: 370px) {
+                    width: 100%;
+                }
+                .icon-sm{
+                    width: 32px;
+                    height: 100%;
+                    background-color: #e3e4f3;
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 5px;
+                    img{
+                        max-width: 25px;
+                        max-height: 80%;
+                        @media ($sm-1679) {
+                            max-height: 20px;
+                        }
+                    }
+                }
+                .trns-id{
+                    font-size: 14px;
+                    margin: 0 15px;
+                    color: $text-primary-dark;
+                    @media ($sm-1679) {
+                        font-size: 13px;
+                    }
+                }
+                .id-copy-btn{
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: transparent;
+                    border: none;
+                    width: 25px;
+                    margin-left: auto;
+                    img{
+                        max-width: 12px;
+                    }
+                }
+            }
+        }
+        
         .my-transaction-title{
             color: $text-primary-dark;
             font-size: 16px;
@@ -850,6 +908,69 @@
     }
 }
 .my-transaction-table-cover{
+    .sec-title-block .block-right{
+        .id-block-sm{
+            display: flex;
+            align-items: center;
+            border-radius: 8px;
+            border: 1px solid #E3E4F3;
+            height: 40px;
+            padding: 5px;
+            @media ($sm-1679) {
+                height: 38px;
+            }
+            .icon-sm{
+                width: 32px;
+                height: 100%;
+                background-color: #e3e4f3;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 5px;
+                img{
+                    max-width: 25px;
+                    max-height: 80%;
+                    @media ($sm-1679) {
+                        max-height: 20px;
+                    }
+                }
+            }
+            .trns-id{
+                font-size: 14px;
+                margin: 0 8px;
+                color: $text-primary-dark;
+                @media ($sm-1679) {
+                    font-size: 13px;
+                }
+            }
+            .id-copy-btn{
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                background-color: transparent;
+                border: none;
+                width: 25px;
+                img{
+                    max-width: 12px;
+                }
+            }
+        }
+        .title-search-box .input-group {
+            @media ($sm-1199) {
+                width: 180px;
+                .form-control {
+                    padding-left: 15px;
+                }
+            }
+        }
+        .filter-dropdown-group .filter-dropdown-btn {
+            @media ($sm-1199) {
+                height: 38px;
+                padding: 8px 15px;
+                width: 125px;
+            }
+        }
+    }
     .trns-history-table{
         td{
             &.sts-td{
