--- a/css/props-mob.css
+++ b/css/props-mob.css
@@ -14,7 +14,7 @@
   .props-price-mob-sec .title-row {
     display: flex;
     font-family: "Poppins";
-    margin-bottom: 25px; }
+    margin-bottom: 15px; }
     .props-price-mob-sec .title-row .data-block {
       margin-left: 8vw; }
       @media (max-width: 350px) {
@@ -38,6 +38,28 @@
         .props-price-mob-sec .title-row .data-block h4.txt-red {
           color: #FC5252; }
   .props-price-mob-sec .graph-block {
-    width: 100%; }
+    width: 100%;
+    height: 400px; }
+  .props-price-mob-sec .g-filter-block {
+    margin-bottom: 15px; }
+    .props-price-mob-sec .g-filter-block .filter-btn-cover {
+      border-radius: 4px;
+      background: #151618;
+      padding: 5px;
+      display: flex;
+      justify-content: center; }
+      .props-price-mob-sec .g-filter-block .filter-btn-cover .filter-btn {
+        margin: 1px;
+        padding: 5px 15px;
+        font-size: 12px;
+        font-weight: 500;
+        transition: .3s;
+        border-radius: 5px;
+        color: #fff;
+        background: #151618; }
+        .props-price-mob-sec .g-filter-block .filter-btn-cover .filter-btn:hover {
+          background-color: #2B2C2E; }
+        .props-price-mob-sec .g-filter-block .filter-btn-cover .filter-btn.active {
+          background-color: #2B2C2E; }
 
 /*# sourceMappingURL=props-mob.css.map */
