--- a/css/props-mob.css
+++ b/css/props-mob.css
@@ -10,7 +10,8 @@
 /*** WSXGA (Wide Super Extended Graphics Array) resolution ***/
 /* placeholder mixin */
 .props-price-mob-sec {
-  background-color: #000; }
+  background-color: #000;
+  padding: 0 20px; }
   .props-price-mob-sec .title-row {
     display: flex;
     font-family: "Poppins";
@@ -39,7 +40,7 @@
           color: #FC5252; }
   .props-price-mob-sec .graph-block {
     width: 100%;
-    height: 400px; }
+    height: 300px; }
   .props-price-mob-sec .g-filter-block {
     margin-bottom: 15px; }
     .props-price-mob-sec .g-filter-block .filter-btn-cover {
