--- a/scss/props-mob.scss
+++ b/scss/props-mob.scss
@@ -1,6 +1,7 @@
 @import "partials/partials";
 .props-price-mob-sec{
     background-color: #000;
+    padding: 0 20px;
     .title-row{
         display: flex;
         font-family: $font-primary;
@@ -37,7 +38,7 @@
     }
     .graph-block{
         width: 100%;
-        height: 400px;
+        height: 300px;
     }
     .g-filter-block{
         margin-bottom: 15px;
