--- a/scss/props-mob.scss
+++ b/scss/props-mob.scss
@@ -6,8 +6,16 @@
         display: flex;
         font-family: $font-primary;
         margin-bottom: 15px;
+        justify-content: space-between;
         .data-block{
-            margin-left: 8vw;
+            padding: 15px;
+            min-height: 90px;
+            background-color: #0E0E10;
+            border-radius: 9px;
+            width: calc(50% - 6px);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             @media (max-width: 350px) {
                 margin-left: 5vw;
             }
@@ -17,14 +25,14 @@
             
             p{
                 font-family: $font-primary;
-                font-size: 12px;
-                color: #848484;
+                font-size: 14px;
+                color: #9FAAC6;
                 margin-bottom: 8px;
             }
             h4{
                 font-family: $font-primary;
                 margin-bottom: 0;
-                font-size: 13px;
+                font-size: 14px;
                 font-weight: 600;
                 color: #fff;
                 &.txt-grn{
