--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -1149,5 +1149,99 @@
       color: #fff; }
     .theme-dark .bridge-body-cover .my-transaction-cover .transaction-id-mob-wrapper .id-block-sm .id-copy-btn img {
       filter: brightness(5); }
+  .theme-dark .liq-pool-body-outer .liq-tab-wrapper {
+    border-color: solid 1px #484848;
+    background-color: #000; }
+  .theme-dark .right-side-nav {
+    border-color: #393939;
+    background-color: #000;
+    box-shadow: none; }
+    .theme-dark .right-side-nav .top-sec {
+      border-color: #393939; }
+      .theme-dark .right-side-nav .top-sec .left-block .dw-title {
+        color: #fff; }
+      .theme-dark .right-side-nav .top-sec .right-block {
+        color: #D9D9D9; }
+    .theme-dark .right-side-nav .nav-body .wallet-wrapper {
+      border-color: #393939; }
+      .theme-dark .right-side-nav .nav-body .wallet-wrapper .wallet-card .wallet-btn {
+        border-color: #1A1A1A;
+        background-color: #1A1A1A;
+        color: #fff; }
+        .theme-dark .right-side-nav .nav-body .wallet-wrapper .wallet-card .wallet-btn:hover {
+          background-color: #000D1F; }
+        .theme-dark .right-side-nav .nav-body .wallet-wrapper .wallet-card .wallet-btn.active {
+          background-color: #000D1F; }
+    .theme-dark .right-side-nav .nav-body .det-outer .total-val-cover {
+      background-color: #1A1A1A;
+      border-color: transparent; }
+      .theme-dark .right-side-nav .nav-body .det-outer .total-val-cover .tot-block {
+        border-color: #282828; }
+        .theme-dark .right-side-nav .nav-body .det-outer .total-val-cover .tot-block h4 {
+          color: #fff; }
+        .theme-dark .right-side-nav .nav-body .det-outer .total-val-cover .tot-block p {
+          color: #AFAFAF; }
+    .theme-dark .right-side-nav .nav-body .det-outer .det-sm-wrapper .det-sm p {
+      color: #AFAFAF; }
+    .theme-dark .right-side-nav .nav-body .det-outer .det-sm-wrapper .det-sm h4 {
+      color: #fff; }
+    .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-title-wrapper .wallet-list-title {
+      color: #fff; }
+    .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card {
+      background-color: #111111;
+      border-color: transparent; }
+      .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title {
+        border-color: #1D1D1D; }
+      .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title .acc-det .acc-name {
+        color: #fff; }
+        .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title .acc-det .acc-name .type {
+          color: #AFAFAF; }
+      .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title .acc-det .acc-id {
+        color: #fff; }
+        .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title .acc-det .acc-id img {
+          filter: grayscale(1) brightness(2); }
+        .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title .acc-det .acc-id .id-label {
+          color: #606060; }
+      .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title .acc-sts-block .sts-block {
+        background-color: #003228;
+        color: #3EF6D1; }
+        .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .acc-title .acc-sts-block .sts-block::before {
+          background-color: #3EF6D1; }
+      .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .data-sm-wrapper {
+        border-color: #1D1D1D; }
+        .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .data-sm-wrapper .data-sm-card p {
+          color: #AFAFAF; }
+        .theme-dark .right-side-nav .nav-body .wallet-list-outer .wl-list-cover .wl-list-card .data-sm-wrapper .data-sm-card h4 {
+          color: #fff; }
+  .theme-dark .right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-title-wrapper .wallet-list-wrapper .wallet-list-link {
+    color: #3EF66C; }
+  .theme-dark .right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-cover .wl-list-card .btm-label-wrapper .btm-label {
+    background-color: #000C2B;
+    color: #2A66FF; }
+    .theme-dark .right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-cover .wl-list-card .btm-label-wrapper .btm-label::before {
+      background-color: #2A66FF; }
+  .theme-dark .right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-cover .wl-list-card .btm-label-wrapper .btm-label.membership {
+    background-color: #002409;
+    color: #3EF66C; }
+    .theme-dark .right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-cover .wl-list-card .btm-label-wrapper .btm-label.membership::before {
+      background-color: #3EF66C; }
+  .theme-dark .right-side-nav .nav-body.custom-scroll::-webkit-scrollbar-track {
+    background: #151515; }
+  .theme-dark .right-side-nav .nav-body.custom-scroll::-webkit-scrollbar-thumb {
+    background: #3A3A3A; }
+  .theme-dark .right-side-nav .nav-body.custom-scroll::-webkit-scrollbar-thumb:hover {
+    background: #3A3A3A; }
+  .theme-dark .right-side-nav .top-sec .left-block .right-nav-back-btn img {
+    filter: grayscale(1) brightness(5); }
+  .theme-dark .right-side-nav .nav-body .wallet-wrapper .wallet-card .wallet-btn.pontem .icon {
+    background-color: #000; }
+  .theme-dark .right-side-nav .nav-body .wallet-connected-wrapper .disconnect-btn {
+    background-color: #d900044f; }
+  .theme-dark .right-side-nav .nav-body .wallet-connected-wrapper .wlt-block .wlt-id-block .wlt-id {
+    color: #fff; }
+  .theme-dark .right-side-nav .nav-body .wallet-connected-wrapper .wlt-block .wlt-id-block .wlt-copy img {
+    filter: grayscale(1) brightness(2); }
+  .theme-dark .right-side-nav .nav-body .wallet-connected-wrapper {
+    border-color: #393939; }
 
 /*# sourceMappingURL=dark-theme.css.map */
