--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1739,4 +1739,169 @@ $dark-block-2: #2B2C2E;
             }
         }
     }
+    .liq-pool-body-outer{
+    .liq-tab-wrapper{
+            border-color: solid 1px #484848;
+            background-color: #000;
+        }
+    }
+
+
+    // end
+    .right-side-nav {
+		border-color: #393939;
+		background-color: #000;
+		box-shadow: none;
+		.top-sec{
+			border-color: #393939;
+			.left-block .dw-title {
+				color: #fff;
+			}
+
+			.right-block {
+				color: #D9D9D9;
+			}
+		}
+		.nav-body {
+			.wallet-wrapper {
+				border-color: #393939;
+				.wallet-card .wallet-btn {
+					border-color: #1A1A1A;
+					background-color: #1A1A1A;
+					color: #fff;
+					&:hover{
+                        background-color: #000D1F;
+                    }
+                    &.active{
+                        background-color: #000D1F;
+                    }
+				}
+			}
+			.det-outer {
+				.total-val-cover {
+					background-color: #1A1A1A;
+					border-color: transparent;
+					.tot-block{
+						border-color: #282828;
+						h4{
+							color: #fff;
+						}
+						p{
+							color: #AFAFAF;
+						}
+					}
+				}
+				.det-sm-wrapper{
+                    .det-sm{
+                        p{
+							color: #AFAFAF;
+						}
+						h4{
+							color: #fff;
+						}
+					}
+				}
+
+			}
+			.wallet-list-outer .wl-list-title-wrapper .wallet-list-title{
+				color: #fff;
+			}
+			.wallet-list-outer .wl-list-cover .wl-list-card {
+				background-color: #111111;
+				border-color: transparent;
+				.acc-title{
+					border-color: #1D1D1D;
+				}
+				.acc-title {
+					.acc-det {
+						.acc-name{
+							color: #fff;
+							.type{
+								color: #AFAFAF;
+							}
+						}
+						.acc-id {
+							color: #fff;
+							img{
+								filter: grayscale(1) brightness(2);
+							}
+							.id-label{
+								color: #606060;
+							}
+						}
+					}
+					.acc-sts-block{
+						.sts-block{
+							background-color: #003228;
+							color: #3EF6D1;
+							&::before{
+								background-color: #3EF6D1;
+							}
+						}
+					}
+				}
+				.data-sm-wrapper {
+					border-color: #1D1D1D;
+					.data-sm-card {
+						p{
+							color: #AFAFAF;
+						}
+						h4{
+							color: #fff;
+						}
+					}
+				}
+			}
+		}
+	}
+	.right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-title-wrapper .wallet-list-wrapper .wallet-list-link{
+		color: #3EF66C;
+	}
+	.right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-cover .wl-list-card .btm-label-wrapper .btm-label{
+		background-color: #000C2B;
+    	color: #2A66FF;
+		&::before{
+			background-color: #2A66FF;
+		}
+	}
+	.right-side-nav .nav-body .det-outer .wallet-list-outer .wl-list-cover .wl-list-card .btm-label-wrapper .btm-label.membership {
+		background-color: #002409;
+		color: #3EF66C;
+		&::before{
+			background-color: #3EF66C;
+		}
+	}
+	.right-side-nav .nav-body{
+		&.custom-scroll {
+			&::-webkit-scrollbar-track {
+				background: #151515;
+			}
+			&::-webkit-scrollbar-thumb {
+				background: #3A3A3A;
+			}
+			&::-webkit-scrollbar-thumb:hover {
+				background: #3A3A3A;
+			}
+		}
+	}
+	.right-side-nav .top-sec .left-block .right-nav-back-btn img{
+		filter: grayscale(1) brightness(5);		
+	}
+	.right-side-nav .nav-body .wallet-wrapper .wallet-card .wallet-btn.pontem .icon{
+        background-color: #000;
+    }
+	.right-side-nav .nav-body .wallet-connected-wrapper .disconnect-btn{
+		background-color: #d900044f;
+	}
+	.right-side-nav .nav-body .wallet-connected-wrapper .wlt-block .wlt-id-block .wlt-id{
+		color: #fff;
+	}
+	.right-side-nav .nav-body .wallet-connected-wrapper .wlt-block .wlt-id-block .wlt-copy{
+		img{
+			filter: grayscale(1) brightness(2);
+		}
+	}
+	.right-side-nav .nav-body .wallet-connected-wrapper{
+		border-color: #393939;		
+	}
 }
